# yggdrasil-scaffold

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
adofai/: __init__.py  profiles.py  textures.py
adofai/utils/: profile.py  signing.py  uuid.py
test/: pseudo.py  quickprogram.py  test_main.http  test_profile.http  test_query.http  test_session.http  test_user.http  tryupstream.py
test/quickprogram/: __init__.py
yggdrasil/: __init__.py  exceptions.py  runtime.py  service.py  util.py
yggdrasil/api/: flow.py  service.py
yggdrasil/api/apphandler/: user.py
yggdrasil/api/preprocesser/: user.py
yggdrasil/api/server/: __init__.py  user.py
yggdrasil/app/: handlers.py  register.py
yggdrasil/apphandlers/: profile.py  query.py  root.py  session.py  user.py
yggdrasil/endpoints/: __init__.py  handlers.py  profile.py  query.py  root.py  session.py  user.py
yggdrasil/handlers/: __init__.py  proto.py  register.py
yggdrasil/models/: __init__.py  root.py  session.py  user.py
yggdrasil/proto/: __init__.py  configs.py  exceptions.py  handlers.py  profiles.py  statictypes.py  textures.py  typealias.py
yggdrasil/proto/adapters/: session.py  user.py
yggdrasil/proto/handlers/: __init__.py  profile.py  query.py  root.py  session.py  user.py
yggdrasil/proto/interfaces/: profile.py  root.py  session.py  user.py
yggdrasil/pseudo/: profiles.py
yggdrasil/pseudo/handlers/: profile.py  query.py  root.py  session.py  user.py
yggdrasil/test/pseudo/: handlers.py  main.py  (+1 more)
yggdrasil/utils/: context.py  signing.py  upstream.py  uuid.py
